--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html, body
 
 body
 {
-background-image: linear-gradient(to right top, #f13333, #d95825, #00a2ff, #0a73aa, #006494);
+	background-image: linear-gradient(to right top, #f13333, #d95825, #00a2ff, #0a73aa, #006494);
 }
 
 .header
@@ -103,4 +103,18 @@ background-image: linear-gradient(to right top, #f13333, #d95825, #00a2ff, #0a73
 	font-size: 85px;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	color: orange
+}
+
+.turnLabel{
+	font-size: 27.5px;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+}
+
+.form-group{
+	font-size: 20px;
+}
+
+#player1p{
+	font-size: 25px;
 }
